--- a/assets/css/variable.css
+++ b/assets/css/variable.css
@@ -1,6 +1,11 @@
 :root{
-    --primary-background-color: #193370;  
+    --primary-background-color: #295D97;  
+    --primary-background-light-color:#184580;
+    --primary-background-dark-color:#0f1a47;
+    --secondary-background-color: #1A2B79;
     --primary-color:#ffffff;
-    --primary-font-family: 'Poppins';
-    --secondary-font-family: 'PoppinsBold';
+    --seconday-color:#19467F;
+    --primary-font-family: 'poppinsregular';
+    --secondary-font-family: 'poppinsbold';
+    --font-primary-color: #000000;
 }
