--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,225 @@
 /* header */
 
-header .container .navbar .collapse ul li button{
-    background-color: #295D97;
+header .container-xl .navbar .collapse ul li button {
+    background-color: var(--primary-background-color);
     color: #ffffff;
+    text-transform: capitalize;
+
 }
-.banner{
-    background-color: #295D97;
+
+header .container-xl .navbar .navbar-brand {
+    width: 80px;
 }
-.banner .carousel .carousel-inner .carousel-item img{
-    height: 500px;
+
+header .navbar {
+    padding: 0.3rem 1rem;
 }
-.banner .carousel .carousel-control-prev .carousel-control-prev-icon{
-    height: 20px;
-    width: 20px;
+
+/* banner CSS */
+.banner {
+    background-color: var(--primary-background-color);
+    height: max-content;
+    width: 100%;
+}
+
+
+
+
+.banner a {
+    text-decoration: none;
+}
+
+.carousel-control-next-icon,
+.carousel-control-prev-icon {
+    margin-right: 100px;
+}
+
+/* card CSS */
+
+.card-section .container .card {
+    border-radius: 15px;
+    border: none;
+    padding: 28px 0;
+}
+.card-section .card .card-body h5,
+.second-banner .centered h2  {
+    font-family: var(--secondary-font-family);
+}
+.card-section .card .card-image {
+    border: 2px solid;
     border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    margin: auto;
+    position: relative;
+    color: var(--seconday-color);
+}
+
+.card-section .card .card-body {
+    text-align: center;
+    height: 150px;
+}
+
+.card-section .card .card-body h5 {
+    text-transform: capitalize;
+}
+
+.card-section .card .card-image img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+
+/* second banner CSS */
+.second-banner .second-banner-button button {
+    background-color: var(--primary-background-color);
+}
+
+.second-banner img {
+    height: 220px;
+    width: 100%;
+    object-fit: cover;
+}
+
+
+.second-banner .centered h2 {
+    text-transform: uppercase;
+}
+
+
+/* contact CSS */
+.contact-form {
+    margin-bottom: 20px;
+}
+
+.contact-form .container .form-data {
+    background-color: #F6F6F6;
+    margin: 100px 0;
+}
+
+.contact-form .container .contact-address {
+    margin: 100px 0;
+
+}
+
+.contact-form .container .form-data form .contact-form input {
+    border-radius: 3px;
+    padding: 12px;
+}
+
+.contact-form .container .form-data form button {
+    background-color: var(--primary-background-color);
+}
+
+.contact-address ul li {
+    list-style: none;
+}
+
+.contact-address ul li a {
+    color: var(--font-primary-color);
+    text-decoration: none;
+}
+
+.contact-address ul li a span {
+    padding-right: 8px;
+
+}
+
+.contact-form .container .contact-address h2 {
+    font-family: var(--secondary-font-family);
+    text-transform: capitalize;
+
+}
+
+.contact-form .container .contact-address .list-block {
+    padding-bottom: 10px;
+    border-bottom: 1px solid #a6a195;
+}
+
+.contact-form .container .contact-address .list-block .list-heading,
+.contact-form .container .contact-address .last-list-block .list-heading {
+    padding: 12px 0;
+}
+
+
+
+.contact-form .container .contact-address .list-block h5::first-letter,
+.contact-form .container .contact-address .last-list-block h5::first-letter {
+    text-transform: uppercase;
+
+}
+
+.contact-form .container .contact-address .list-block ul li a i {
+    font-size: 14px;
+}
+
+.contact-form .container .contact-address .last-list-block ul li a i {
+    font-size: 10px;
+    padding-left: 5px;
+}
+
+.contact-form .container .contact-address .list-block ul li {
+    line-height: 2;
+}
+
+/* footer CSS */
+footer .container .icon-list ul li {
+    list-style: none;
+    display: inline;
+    padding-right: 20px;
+}
+
+footer .container .icon-list ul li a {
+    color: var(--primary-color);
+}
+
+
+
+footer .container .middle-list ul li {
+    list-style: none;
+
+}
+
+footer .container .last-list ul li {
+    list-style: none;
+
+}
+
+footer .container .middle-list ul li a {
+    text-decoration: none;
+    color: var(--primary-color);
+}
+
+footer .container .middle-list ul li:first-child,
+footer .container .middle-list ul li:nth-child(2) {
+    text-transform: uppercase;
+}
+
+footer .container .middle-list ul li:nth-child(3),
+footer .container .middle-list ul li:nth-child(4) {
+    text-transform: capitalize;
+}
+
+
+footer .container .last-list ul li a {
+    text-decoration: none;
+    color: var(--primary-color);
+
+}
+
+footer .container .last-list ul li a span i {
+    font-size: 14px;
+    padding-right: 6px;
+}
+
+.footer-bottom ul li {
+    color: var(--primary-color);
+    display: inline-flex;
+
+}
+
+.footer-bottom ul li:first-child {
+    padding-right: 47px;
 }
